reduce risk of a contributor commiting their token
* Rename releases/token.yml to releases/secret.yml.tmpl
* Add a .gitignore entry for releases/secret.yml
* Edit README.md instructions to direct users to copy
  releases/secret.yml.tmpl to releases/secret.yml before replacing the
  placeholder.

Edit references to DigitalOcean in README.md to be capitalized
correctly.

Edit the placeholder value; remove the the wrapping angle brackets so
that users don't mistakenly think the angle brackets are necessary.

--- a/releases/secret.yml.tmpl
+++ b/releases/secret.yml.tmpl
@@ -7,4 +7,4 @@ data:
   # insert your base64 encoded DO access token here, ensure there's no trailing newline:
   # to base64 encode your token run:
   #      echo -n "abc123abc123doaccesstoken" | base64
-  access-token: "<INSERT BASE64 ENCODED DO ACCESS TOKEN>"
+  access-token: "REPLACE WITH BASE64 ENCODED DO ACCESS TOKEN"
