docs: add -w flag to base64 commands

--- a/releases/secret.yml.tmpl
+++ b/releases/secret.yml.tmpl
@@ -6,5 +6,5 @@ metadata:
 data:
   # insert your base64 encoded DO access token here, ensure there's no trailing newline:
   # to base64 encode your token run:
-  #      echo -n "abc123abc123doaccesstoken" | base64
+  #      echo -n "abc123abc123doaccesstoken" | base64 | tr -d '\r\n'
   access-token: "REPLACE WITH BASE64 ENCODED DO ACCESS TOKEN"
