Use stringData for Kubernetes Secret containing DO Token
Fix #51

--- a/releases/secret.yml.tmpl
+++ b/releases/secret.yml.tmpl
@@ -3,8 +3,6 @@ kind: Secret
 metadata:
   name: digitalocean
   namespace: kube-system
-data:
-  # insert your base64 encoded DO access token here, ensure there's no trailing newline:
-  # to base64 encode your token run:
-  #      echo -n "abc123abc123doaccesstoken" | base64 | tr -d '\r\n'
-  access-token: "REPLACE WITH BASE64 ENCODED DO ACCESS TOKEN"
+stringData:
+  # insert your DO access token here
+  access-token: "REPLACE WITH DO ACCESS TOKEN"
